--- a/package.json
+++ b/package.json
@@ -19,7 +19,12 @@
     "@angular/platform-browser-dynamic": "^14.0.0",
     "@angular/router": "^14.0.0",
     "@rxjs/rx": "^4.1.0",
+    "@types/socket.io-client": "^3.0.0",
+    "express": "^4.18.3",
+    "http": "0.0.1-security",
     "rxjs": "~7.5.0",
+    "socket.io": "^4.7.4",
+    "socket.io-client": "^4.7.4",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
   },
